# amos2025ss04-ai-driven-testing

./: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt  verify_integration.py
Deliverables/: project-summary.docx
backend/: allowed_models.json  api.py  cli.py  demo_export_manager.py  environment.yml  execution.py  export_manager.py  llm_manager.py  main.py  schemas.py  source_code.txt  user_message.txt
docs/: README.md  modules.md
exports/: export_20250708_220255.http  export_20250708_220255.json  export_20250708_220255.md  export_20250708_220255.txt  export_20250708_220255.xml  export_20250708_220338.http  export_20250708_220338.json  export_20250708_220338.md  export_20250708_220338.txt  export_20250708_220338.xml  export_20250708_220351.http  export_20250708_220351.json  export_20250708_220351.md  export_20250708_220351.txt  export_20250708_220351.xml  export_20250708_220422.http  export_20250708_220422.json  export_20250708_220422.md  export_20250708_220422.txt  export_20250708_220422.xml  export_20250708_220521.http  export_20250708_220521.json  export_20250708_220521.md  export_20250708_220521.txt  export_20250708_220521.xml  export_20250708_220759.http  export_20250708_220759.json  export_20250708_220759.md  export_20250708_220759.txt  export_20250708_220759.xml  export_20250708_220928.http  export_20250708_220928.json  export_20250708_220928.md  export_20250708_220928.txt  export_20250708_220928.xml  export_20250708_221557.http  export_20250708_221557.json  export_20250708_221557.md  export_20250708_221557.txt  (+21 more)
frontend/src/: App.tsx  (+7 more)
(+46 files in other folders)
