[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79  # Using 79 to match your pre-commit configuration
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ExampleTests/generatedTests
  | docker_runner\.log
  | formatting_errors\.txt
  | backend/outputs
  | backend/output\.md
  | backend/extracted
)/
'''

[tool.setuptools]
packages = []